@@ -8,7 +8,7 @@ public class CommonMob extends BaseCommon implements MobRarity {
 
     @Override
     public float StatMultiplier() {
-        return 0.75F;
+        return 0.85F;
     }
 
     @Override
@@ -18,7 +18,7 @@ public class CommonMob extends BaseCommon implements MobRarity {
 
     @Override
     public float HealthMultiplier() {
-        return 0.55F;
+        return 0.85F;
     }
 
     @Override
